# routes/bookingRouter.js
@@ -1,5 +1,5 @@
 const express = require('express');
-const { createBooking, getBooking, getBookings, deleteBooking } = require('../controllers/bookingController');
+const { createBooking, getBooking, getBookings, deleteBooking, getOwnerSingleBookings, getOwnerBoookings, getUserSingleBookings, getUserBoookings } = require('../controllers/bookingController');
 const router = express.Router()
 
 const { isKycOwner, isVerifiedOwner, verifyAdmin, verifyToken } = require("../utils/verifyToken");
@@ -8,13 +8,25 @@ const { isKycOwner, isVerifiedOwner, verifyAdmin, verifyToken } = require("../ut
 router.post("/", verifyToken, createBooking)
 
 //get
-router.get("/:id",verifyToken, verifyAdmin, getBooking)
+router.get("/:id", verifyToken, verifyAdmin, getBooking)
 
 //get all
 router.get("/",verifyToken, verifyAdmin, getBookings)
 
-// Delete 
-router.delete("/:id",verifyToken, verifyAdmin, deleteBooking)
+// get users personal all boooking
+router.get("/usersbook/all", verifyToken, getUserBoookings)
+
+// Get users perosnal  id of a booking
+router.get("/usersbook/:bookid", verifyToken, getUserSingleBookings)
+
+// get owners all boooking
+router.get("/ownersbooking/:hotelid", verifyToken, isKycOwner, getOwnerBoookings)
+
+// Get owners id of a booking
+router.get("/ownersbooking/:hotelid/:bookingid", verifyToken, isKycOwner, getOwnerSingleBookings)
+
+// // Delete 
+router.delete("/:id",verifyToken, deleteBooking)
 
 
 
